fixing mobile horozontal overflow

--- a/src/Brands/brands.less
+++ b/src/Brands/brands.less
@@ -1,110 +1,117 @@
 
-.highlights{
-    background-color: rgba(255,255,255,.75);;
-    color: #333;
+.brandWrapper{
+    position: relative;
     width: 100%;
-    position: relative;
-    right: -10%;
-    margin-top: -3%;
-    .skew{
-        padding:10%;
-        //
-        h2{
-            text-transform: uppercase;
-        }
-        ul{
-            padding: 0;
-            padding-bottom:15px;
-            margin-left: 10%;
-        }
-    }
-}
+    overflow-x: hidden;
 
-
-.bodyCopy{
-    padding: 5%;
-    padding-left: 10%;
-    position: relative;
-    left: -10%;
-    background-color: rgba(50,50,50,.90);
-    margin-left: 5%;
-    margin-top: -3%;
-    z-index: 2;
-    .unskew{
-        padding:3%;
-    }
-}
-
-.vidHolder{
-    position: relative;
-    margin: 0;
-    margin-top: -3%;
-    padding-bottom: 25%;
-}
-
-.mainImage{
-    width: 90%;
-    position: relative;
-    right:-10%;
-    padding: 10%;
-    padding-top: 20%;
-    padding-bottom:0;
-    z-index: 2;
-    @media (min-width: 768px) {
-        
-    padding: 10%;
-    padding-bottom:0;
-    }
-
-    .skewPanel{
-        transform: skewY(-10deg);
-        position: relative;
+    .highlights{
+        background-color: rgba(255,255,255,.75);;
+        color: #333;
         width: 100%;
-        overflow: hidden;
-        border:none;
-        border-width: 5px;
-    }
-    .unskewPanel{
-        transform: skewY(10deg);
         position: relative;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        padding-top: 57%;
-
-        img{
-            position: absolute;
-            width: 120%;
-            left: -5%;  
-            top:-16%;    
-        }
-    }
-    @media (min-width: 768px) { 
-
-        .thumbLabel{
-            position: absolute;
-            right: -9%;
-            text-align: right;
-            top: -12%;
+        right: -10%;
+        margin-top: -3%;
+        .skew{
+            padding:10%;
+            //
             h2{
-                font-size: 2vw;
+                text-transform: uppercase;
             }
+            ul{
+                padding: 0;
+                padding-bottom:15px;
+                margin-left: 10%;
+            }
+        }
+    }
+
+
+    .bodyCopy{
+        padding: 5%;
+        padding-left: 10%;
+        position: relative;
+        left: -10%;
+        background-color: rgba(50,50,50,.90);
+        margin-left: 5%;
+        margin-top: -3%;
+        z-index: 2;
+        .unskew{
+            padding:3%;
+        }
+    }
+
+    .vidHolder{
+        position: relative;
+        margin: 0;
+        margin-top: -3%;
+        padding-bottom: 25%;
+    }
+
+    .mainImage{
+        width: 90%;
+        position: relative;
+        right:-10%;
+        padding: 10%;
+        padding-top: 20%;
+        padding-bottom:0;
+        z-index: 2;
+        @media (min-width: 768px) {
+            
+        padding: 10%;
+        padding-bottom:0;
         }
 
         .skewPanel{
-            transform: skewX(-10deg);
-        
+            transform: skewY(-10deg);
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            border:none;
+            border-width: 5px;
         }
         .unskewPanel{
-            transform: skewX(10deg);
+            transform: skewY(10deg);
+            position: relative;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            padding-top: 57%;
+
             img{
-              top:-5%;   
+                position: absolute;
+                width: 120%;
+                left: -5%;  
+                top:-16%;    
             }
         }
-     }
+        @media (min-width: 768px) { 
+
+            .thumbLabel{
+                position: absolute;
+                right: -9%;
+                text-align: right;
+                top: -12%;
+                h2{
+                    font-size: 2vw;
+                }
+            }
+
+            .skewPanel{
+                transform: skewX(-10deg);
+            
+            }
+            .unskewPanel{
+                transform: skewX(10deg);
+                img{
+                top:-5%;   
+                }
+            }
+        }
+    }
+
+
+
+    // Generated Responsive Vimeo Embed CSS
+    .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
 }
-
-
-
-// Generated Responsive Vimeo Embed CSS
-.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
